--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,20 @@
 ﻿cmake_minimum_required(VERSION 3.15)
 project(CezarCrypting)
 
-# Вмикаємо побудову DLL (shared library)
-add_library(CezarCrypting SHARED
+set(CMAKE_CXX_STANDARD 20)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
+add_library(MyDll SHARED
         src/mylib.cpp
 )
 
-# Щоб клієнти могли підключати заголовки
-target_include_directories(CezarCrypting PUBLIC
-        ${PROJECT_SOURCE_DIR}/include
+add_executable(${PROJECT_NAME}
+        src/main.cpp
+)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE MyDll)
+
+# Примусово ставимо, що це консольний EXE
+set_target_properties(${PROJECT_NAME} PROPERTIES
+        WIN32_EXECUTABLE FALSE
 )
